--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+	<h1>Sophie Bluel <span>ARCHITECTE D'INTÉRIEUR</span></h1>
 	<nav>
 		<ul>
 			 <li><a href="#portfolio">projets</a></li>
